# share_project

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: email_service.py  template.py
app/templates/: __init__.py
app/utils/: file_utils.py  token_utils.py
