[project]
name = "share-project"
version = "0.1.0"
description = "File sharing service with verification links"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.4.2",
    "pydantic-settings>=2.0.3",
    "aiofiles>=23.2.1",
]
